some changes, commit for future delete