@@ -1,6 +1,6 @@
 package com.eleks.academy.whoami.service.impl;
 
-import com.eleks.academy.whoami.core.Game;
+import com.eleks.academy.whoami.core.SynchronousGame;
 import com.eleks.academy.whoami.core.impl.Answer;
 import com.eleks.academy.whoami.core.impl.PersistentGame;
 import com.eleks.academy.whoami.core.impl.StartGameAnswer;
@@ -15,35 +15,42 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class GameServiceImpl implements GameService {
 
 	private final GameRepository gameRepository;
+	private Map<String, String> playersInGame = new HashMap<>();
 
 	@Override
 	public List<GameLight> findAvailableGames(String player) {
 		return this.gameRepository.findAllAvailable(player)
 				.map(GameLight::of)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
 	public GameDetails createGame(String player, NewGameRequest gameRequest) {
 		final var game = this.gameRepository.save(new PersistentGame(player, gameRequest.getMaxPlayers()));
-
+		//////////////////////
+		playersInGame.put(game.getId(), player);
+		//////////////////////
 		return GameDetails.of(game);
 	}
 
 	@Override
 	public void enrollToGame(String id, String player) {
+		//////////////////////
+		playersInGame.put(id, player);
+		//////////////////////
 		this.gameRepository.findById(id)
-				.filter(Game::isAvailable)
+				.filter(SynchronousGame::isAvailable)
 				.ifPresentOrElse(
 						game -> game.makeTurn(new Answer(player)),
 						() -> {
@@ -55,24 +62,23 @@ public class GameServiceImpl implements GameService {
 	@Override
 	public Optional<GameDetails> findByIdAndPlayer(String id, String player) {
 		return this.gameRepository.findById(id)
-				.filter(game -> game.hasPlayer(player))
+				.filter(game -> game.findPlayer(player).isPresent())
 				.map(GameDetails::of);
 	}
 
 	@Override
 	public void suggestCharacter(String id, String player, CharacterSuggestion suggestion) {
 		this.gameRepository.findById(id)
-				.filter(game -> game.hasPlayer(player))
-				.ifPresentOrElse(
-						game -> game.makeTurn(new Answer(player, suggestion.getCharacter())),
-						() -> {
-							throw new ResponseStatusException(HttpStatus.NOT_FOUND, HttpStatus.NOT_FOUND.getReasonPhrase());
-						});
+				.flatMap(game -> game.findPlayer(player))
+				.ifPresent(p -> p.setCharacter(suggestion.getCharacter()));
 	}
 
 	@Override
 	public Optional<GameDetails> startGame(String id, String player) {
-		UnaryOperator<Game> startGame = game -> {
+		//////////////////////
+		System.out.println(playersInGame);
+		//////////////////////
+		UnaryOperator<SynchronousGame> startGame = game -> {
 			game.makeTurn(new StartGameAnswer(player));
 
 			return game;
